--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 		<link rel="shortcut icon" href="favicon.ico" />
 
-		<link rel="stylesheet" href="./jq/css/themes/default/jquery.mobile-1.4.5.min.css" />
+		<link rel="stylesheet" href="jquery.mobile-1.4.5.min.css" />
 
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700" />
 
-		<script src="./jq/js/jquery.js"></script>
-		<script src="./jq/js/jquery.mobile-1.4.5.min.js"></script>
+		<script src="jquery.js"></script>
+		<script src="jquery.mobile-1.4.5.min.js"></script>
 	</head>
 		<!--
 		<link rel="stylesheet" href="./css/bootstrap.css" />
