--- a/music.html
+++ b/music.html
@@ -12,7 +12,7 @@
 
 		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700" />
 
-		<script src=".jquery.js"></script>
+		<script src="jquery.js"></script>
 		<script src="jquery.mobile-1.4.5.min.js"></script>
 
  </head>
